hphp/hack/test/typecheck/inout/bad_inout_decl_special_construct.php.exp
File "bad_inout_decl_special_construct.php", line 4, characters 31-41:
Parameters may not be marked inout on constructors (Parsing[1002])
