hphp/hack/test/typecheck/inout/bad_inout_decl_special_construct.php
<?hh // strict

class C {
  public function __construct(inout int $x) {}
}
